# yolo11_qt_dnn_detect

./: README.md  ascend_yolo.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  safequeue.h
ascend_yolo/: CMakeLists.txt  sampleYOLOV11.cpp
